# vdeploy

./: README.md  pyproject.toml
defs/: llama3.toml  small.toml
src/vdeploy/: __main__.py  config.py  deploy.py  offers.py  watchdog.py
